--- a/longbow-starter/longbow-starter-id/pom.xml
+++ b/longbow-starter/longbow-starter-id/pom.xml
@@ -12,7 +12,7 @@
     <packaging>pom</packaging>
     <modules>
         <!--百度ID生成器-->
-        <module>uid-generator</module>
+        <!--<module>uid-generator</module>-->
         <module>longbow-starter-uid</module>
     </modules>
 </project>
